STIJ-406 Fix WCAG AA Compliancy text color contrast ratio issue

--- a/components/21-atoms/button/css/_button-secondary-alert.scss
+++ b/components/21-atoms/button/css/_button-secondary-alert.scss
@@ -13,7 +13,7 @@
 
   border-color: color('red', -2);
   background-color: color('white');
-  color: color('red', -1);
+  color: color('red', 1);
 
   &.button-block {
     @include button-icon;
